<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:weightSum="100">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/indigo">

        <TextView
            android:id="@+id/toolbarTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/app_name"
            android:textAppearance="@android:style/TextAppearance.WindowTitle"
            android:visibility="visible" />
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="100">

        <ListView
            android:id="@+id/mListView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="90">

        </ListView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:gravity="bottom"
            android:orientation="horizontal"
            android:padding="@dimen/ll_padding_login"
            android:weightSum="2">

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="0dp"
                android:id="@+id/myOrders"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/bt_margin_end"
                android:layout_weight="1"
                android:background="@drawable/home_button_bg_trans"
                android:text="@string/my_orders" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="0dp"
                android:id="@+id/signOut"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/home_button_bg"
                android:text="@string/sign_out"
                android:textColor="@color/white" />


        </LinearLayout>

    </LinearLayout>

</LinearLayout>